新建仿京东首页快报的Activity(待做 自定义view)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".activity.DialogUtilActivity">
         </activity>
+        <activity android:name=".activity.NoticeViewActivity">
+        </activity>
     </application>
 
 </manifest>
