--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,21 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        // 修改打包的app名
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                def outputFile = output.outputFile
+                if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                    // 输出apk名称为boohee_v1.0_2015-01-15_wandoujia.apk
+                    def fileName = "demo_v${versionName}_${variant.baseName}.apk";
+                    output.outputFile = new File(outputFile.parent, fileName)
+                }
+            }
+        }
     }
 }
 
