--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,30 +3,25 @@
           package="com.iven.app">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".MyApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".activity.UpdateVersionActivity">
         </activity>
         <activity android:name=".activity.VDHActivity">
         </activity>
         <activity android:name=".activity.RealmActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".activity.PullToRefreshActivity">
         </activity>
@@ -35,6 +30,10 @@
         <activity android:name=".activity.DialogUtilActivity">
         </activity>
         <activity android:name=".activity.NoticeViewActivity">
+        </activity>
+        <activity android:name=".activity.listview.ListViewSingleActivity">
+        </activity>
+        <activity android:name=".activity.listview.ListViewMultiplActivity">
         </activity>
     </application>
 
