--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -34,6 +35,8 @@
         <activity android:name=".activity.listview.ListViewSingleActivity">
         </activity>
         <activity android:name=".activity.listview.ListViewMultiplActivity">
+        </activity>
+        <activity android:name=".activity.FragmentHomeActivity">
         </activity>
     </application>
 
