--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN"/>-->
+
+
+            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
             <!--</intent-filter>-->
         </activity>
         <activity android:name=".activity.UpdateVersionActivity">
@@ -39,6 +41,11 @@
         <activity android:name=".activity.FragmentHomeActivity">
         </activity>
         <activity android:name=".activity.ViewLocationActivity">
+
+        </activity>
+        <activity
+            android:name=".activity.TestActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
