--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN"/>-->
-
-
-            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".activity.UpdateVersionActivity">
         </activity>
@@ -41,16 +39,10 @@
         <activity android:name=".activity.FragmentHomeActivity">
         </activity>
         <activity android:name=".activity.ViewLocationActivity">
-
         </activity>
-        <activity
-            android:name=".activity.TestActivity"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+        <activity android:name=".activity.TestActivity">
+        </activity>
+        <activity android:name=".activity.ChartViewActivity">
         </activity>
     </application>
 
