--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         </activity>
         <activity android:name=".activity.ChartViewActivity">
         </activity>
+        <activity android:name=".activity.recyclerview.RecyclerviewActivity">
+        </activity>
     </application>
 
 </manifest>
