--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         </activity>
         <activity android:name=".activity.recyclerview.RecyclerviewActivity">
         </activity>
+        <activity android:name=".activity.WebActivity"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
     </application>
 
 </manifest>
