--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ android {
     buildToolsVersion "24.0.3"
     defaultConfig {
         applicationId "com.iven.app"
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion rootProject.ext.minSdk
+        targetSdkVersion rootProject.ext.targetSdk
         versionCode 1
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+//    https://gold.xitu.io/post/58945a8b570c3500623081f0     ----gradle配置相关
     buildTypes {
         release {
             minifyEnabled false
@@ -50,4 +51,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+    //约束布局---http://blog.csdn.net/guolin_blog/article/details/53122387(郭霖大神的入门教程)
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:cardview-v7:25.0.1'
 }
