画廊效果实现...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity android:name=".activity.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.TestActivity">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity android:name=".activity.UpdateVersionActivity">
         </activity>
@@ -47,7 +49,6 @@
         </activity>
         <activity android:name=".activity.ViewLocationActivity">
         </activity>
-
         <activity android:name=".activity.ChartViewActivity">
         </activity>
         <activity android:name=".activity.recyclerview.RecyclerviewActivity">
@@ -57,6 +58,8 @@
             android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".activity.material.MaterialDesignActivity">
+        </activity>
+        <activity android:name=".activity.GalleryViewPagerActivity">
         </activity>
     </application>
 
