--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,9 @@ dependencies {
     compile 'com.android.support:design:24.0.3'
     compile 'com.google.code.gson:gson:2.8.0'
     //区分出debug和release版本
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+//    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     //约束布局---http://blog.csdn.net/guolin_blog/article/details/53122387(郭霖大神的入门教程)
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:cardview-v7:25.0.1'
