--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <application
         android:name=".MyApp"
@@ -63,8 +63,11 @@
         </activity>
         <activity android:name=".activity.GalleryViewPagerActivity">
         </activity>
-        <!--服务，注册-->
+        <!-- 服务，注册 -->
         <service android:name=".service.WindowService"/>
+
+        <activity android:name=".activity.BankSearchActivity">
+        </activity>
     </application>
 
 </manifest>
